--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ jiter==0.8.2
 openai==1.63.0
 pydantic==2.10.6
 pydantic_core==2.27.2
+python-dotenv==1.0.1
 sniffio==1.3.1
 tqdm==4.67.1
 typing_extensions==4.12.2
